--- a/app/src/main/res/layout/dialog_item_description.xml
+++ b/app/src/main/res/layout/dialog_item_description.xml
@@ -4,8 +4,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Splash Screen"
-        android:textColor="@android:color/black"
-        android:textSize="70sp"
+        android:id="@+id/tv_descriptiondialog_des"
         />
 </RelativeLayout>
